[package]
authors = ["Issac Trotts <issac.trotts@gmail.com>"]
description = "Trigram-based string similarity for fuzzy matching."
documentation = "https://docs.rs/trigram"
edition = "2018"
homepage = "https://github.com/ijt/trigram"
keywords = ["trigram", "string", "fuzzy", "matching"]
license = "Apache-2.0"
name = "trigram"
readme = "README.md"
repository = "https://github.com/ijt/trigram"
version = "0.2.2"

[dependencies]
regex = "1.3.1"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "similarity"
harness = false

