[package]
authors = ["Issac Trotts <issac.trotts@gmail.com>"]
description = "Trigram-based string similarity for fuzzy matching."
documentation = "https://docs.rs/trigram"
edition = "2018"
rust-version = "1.40"
homepage = "https://github.com/ijt/trigram"
keywords = ["trigram", "string", "fuzzy", "matching"]
license = "Apache-2.0"
name = "trigram"
readme = "README.md"
repository = "https://github.com/ijt/trigram"
version = "0.4.4"

[dependencies]
regex = "1.6"
once_cell = "1.13"

[dev-dependencies]
criterion = "0.3"
table-test = "0.2"

[[bench]]
name = "similarity"
harness = false

